@@ -16,6 +16,8 @@
   * #image_element
   * #form_element
   * #list_item_element
+  * #unordered_list_element
+  * #ordered_list_element
 === 2016-07-05
 * Enhancements
   * Added #value= to TextField and TextArea
